Avance del template Actividades

--- a/aplicacion/templates/aplicacion/actividades.html
+++ b/aplicacion/templates/aplicacion/actividades.html
@@ -9,9 +9,7 @@
     <h1>Actividades</h1>
     {% for actividad in actividades %}
     <ul>
-        <li>
-        {{actividad.id}} {{actividad.nombre}} {{actividad.comision}}
-        </li>
+        <li>{{actividad.id}} {{actividad.nombre}} {{actividad.comision}}</li>
     </ul>
     {% endfor %}
 </body>
