--- a/aplicacion/templates/aplicacion/actividades.html
+++ b/aplicacion/templates/aplicacion/actividades.html
@@ -1,16 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Actividades</title>
-</head>
-<body bgcolor="green">
-    <h1>Actividades</h1>
+{% extends 'aplicacion/base.html' %}
+{% load static %}
+{% block title %}
+    Actividades
+{% endblock title %}
+{% block header %}
+    Listado de Actividades
+{% endblock header %}
+{% block content %}
+<table class="table">
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Nombre</th>
+            <th>Comision</th>
+        </tr>
+    </thead>
+    <tbody>
     {% for actividad in actividades %}
-    <ul>
-        <li>{{actividad.id}} {{actividad.nombre}} {{actividad.comision}}</li>
-    </ul>
+        <tr>
+            <td>{{actividad.id}}</td>
+            <td>{{actividad.nombre}}</td>
+            <td>{{actividad.comision}}</td>
+        </tr>
     {% endfor %}
-</body>
-</html>
+    </tbody>
+</table>
+{% endblock %}
