--- a/aplicacion/templates/aplicacion/base.html
+++ b/aplicacion/templates/aplicacion/base.html
@@ -27,7 +27,7 @@
                 <a class="navbar-brand" href="#!">Inicio</a>
                 <a class="navbar-brand" href="{% url 'usuarios' %}">Usuarios</a>
                 <a class="navbar-brand" href="{% url 'actividades' %}">Actividades</a>
-                <a class="navbar-brand" href="{% url 'profesores' %}">Profesores</a>
+                <a class="navbar-brand" href="{% url 'staff' %}">Staff</a>
                 <a class="btn btn-primary" href="{% url 'admin:index' %}">Administración</a>
             </div>
         </nav>
