--- a/aplicacion/templates/aplicacion/base.html
+++ b/aplicacion/templates/aplicacion/base.html
@@ -39,8 +39,9 @@
                         <div class="text-center text-white">
                             <!-- Page heading-->
                             <h1 class="mb-5">
-                                {% block header %}
                                 3era Pre-Entrega - Quiroga
+                                {% block header %}
+                                Inicio
                                 {% endblock header %}
                             </h1>
                             <!-- Signup form-->
