--- a/aplicacion/templates/aplicacion/staff.html
+++ b/aplicacion/templates/aplicacion/staff.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profesores</title>
+    <title>Staff</title>
 </head>
 <body bgcolor="blue">
-    <h1>Profesores</h1>
+    <h1>Staff</h1>
 </body>
 </html>
