--- a/aplicacion/templates/aplicacion/base.html
+++ b/aplicacion/templates/aplicacion/base.html
@@ -28,6 +28,7 @@
                 <a class="navbar-brand" href="{% url 'usuarios' %}">Usuarios</a>
                 <a class="navbar-brand" href="{% url 'actividades' %}">Actividades</a>
                 <a class="navbar-brand" href="{% url 'staff' %}">Staff</a>
+                <a class="btn btn-primary" href="{% url 'buscar_comision' %}">Buscar</a>
                 <a class="btn btn-primary" href="{% url 'admin:index' %}">Administración</a>
             </div>
         </nav>
@@ -35,10 +36,10 @@
         <header class="masthead">
             <div class="container position-relative">
                 <div class="row justify-content-center">
-                    <div class="col-xl-6">
+                    <div class="col-xl-12">
                         <div class="text-center text-white">
                             <!-- Page heading-->
-                            <h1 class="mb-5">
+                            <h1 class="mb-5" style="color:black; -webkit-text-fill-color:black">
                                 3era Pre-Entrega - Quiroga
                                 {% block header %}
                                 Inicio
@@ -59,35 +60,6 @@
         </header>
         {% block content %}
         {% endblock content %}
-        <!-- Testimonials-->
-        <section class="testimonials text-center bg-light">
-            <div class="container">
-                <h2 class="mb-5">What people are saying...</h2>
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="{% static 'aplicacion/assets/img/testimonials-1.jpg' %}" alt="..." />
-                            <h5>Margaret E.</h5>
-                            <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="{% static 'aplicacion/assets/img/testimonials-2.jpg' %}" alt="..." />
-                            <h5>Fred S.</h5>
-                            <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="{% static 'aplicacion/assets/img/testimonials-3.jpg' %}" alt="..." />
-                            <h5>Sarah W.</h5>
-                            <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
         <!-- Call to Action-->
         <section class="call-to-action text-white text-center" id="signup">
             <div class="container position-relative">
