--- a/aplicacion/templates/aplicacion/resultadosComision.html
+++ b/aplicacion/templates/aplicacion/resultadosComision.html
@@ -1,4 +1,4 @@
-{% extends 'aplicacion/base.html' }
+{% extends 'aplicacion/base.html' %}
 {% load static %}
 {% block header %}
 Actividades de la comision {{comision}}
@@ -14,7 +14,6 @@ Actividades de la comision {{comision}}
             </tr>
         </thead>
         <tbody>
-        {% for actividad in actividades %}
             <tr>
                 <td>{{actividad.id}}</td>
                 <td>{{actividad.nombre}}</td>
